# screenlock

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: main.cpp  os.cpp  os.hpp
src/auth/: Auth.hpp  AuthError.hpp  ShadowAuth.cpp  ShadowAuth.hpp
src/locker/: Locker.hpp  LockerError.hpp  Position.hpp  Size.hpp  X11Locker.cpp  X11Locker.hpp  X11Locker_impl.cpp  X11Locker_impl.hpp  cursor.bitmap  cursor_text.bitmap  mask.bitmap
